stoped tracer thread
