# docs/swagger.yaml
@@ -182,6 +182,8 @@ definitions:
   models.AppPost:
     description: AppPost type information
     properties:
+      active:
+        type: boolean
       description:
         type: string
       name:
@@ -356,6 +358,8 @@ definitions:
   models.PagePost:
     description: PagePost type information
     properties:
+      active:
+        type: boolean
       description:
         type: string
       name:
@@ -1157,7 +1161,7 @@ paths:
     get:
       consumes:
       - application/json
-      description: Get app roles by UUID
+      description: Get app endpoint role matrix by UUID
       parameters:
       - description: App UUID
         in: path
@@ -1174,9 +1178,9 @@ paths:
             - $ref: '#/definitions/common.ResponseHTTP'
             - properties:
                 data:
-                  items:
-                    $ref: '#/definitions/models.RolePut'
-                  type: array
+                  additionalProperties:
+                    type: string
+                  type: object
               type: object
         "404":
           description: Not Found
@@ -1184,7 +1188,41 @@ paths:
             $ref: '#/definitions/common.ResponseHTTP'
       security:
       - ApiKeyAuth: []
-      summary: Get App Roles by UUID
+      summary: Get App Roles Matrix by UUID
+      tags:
+      - ClientOnly
+  /clientmatrixpath/{app_uuid}:
+    get:
+      consumes:
+      - application/json
+      description: Get app endpoint role matrix by UUID
+      parameters:
+      - description: App UUID
+        in: path
+        name: app_uuid
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/common.ResponseHTTP'
+            - properties:
+                data:
+                  additionalProperties:
+                    type: string
+                  type: object
+              type: object
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/common.ResponseHTTP'
+      security:
+      - ApiKeyAuth: []
+      summary: Get App Roles Matrix by UUID
       tags:
       - ClientOnly
   /dashboard:
